# lipi

./: .cursorrules  .gitignore  .tmp-eval.js  .tmp-nav.json  .tmp-resize.json  .tmp-shot.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  build-with-key.ps1  eslint.config.mjs  index.html  lipi-dev.key.pub  msvc_run.bat  package-lock.json  package.json  serve-mocks.js  tauri_build.ps1  test_out.txt  try_build.ps1  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  verify.ps1  vit-5c.txt  vit-cp.txt  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  release.yml
.mocks/: lipi-anime-sakura.html  lipi-flower-selection.html  lipi-glass-contexts.html  lipi-ide-preview.html  lipi-palette-proposal.html  lipi-theme-picker.html  lipi-windowed-final.html
design-system/: index.html
docs/: ENGINEERING.md  RELEASING.md
docs/decisions/: 0046-m2c-mobile-shim.md  0077-m6a-workspace-tab-model.md  0078-m6a-workspace-tabs-dom-render.md  0079-m6a-v1-v2-migration.md  0080-m6a-close-preserves-recents.md  0081-m6b-persisted-state-on-tab.md  0082-m6b-v4-export-v3-migration.md  0083-m6b-mirror-back-one-way.md  0084-m6b-format-version-separation.md  0085-p2-offline-license-validation.md  0086-p2-trial-privkey-embedded.md  0087-p2-machine-fingerprint-sha256.md  0088-p2-jws-compact-serialization.md  0089-p3-surfaces-helper.md  0090-p3-trial-badges-and-banners.md  0091-p3-grace-period-gate-vs-nag.md  0092-p3-sign-license-cli.md  0093-p3-iap-stub-now-real-later.md  0094-p5-prod-keypair.md  0095-p5-update-server.md  0096-p5-ci-platforms.md  0097-p4-iap-per-machine-keypair.md  0098-p4-iap-receipt-format-routing.md  0099-p4-iap-no-revalidation.md  0100-p4-1-ms-oauth.md  0101-p4-1-refresh-license.md  0186-p-mb-a-stronghold-password-flow.md
docs/plans/: m6b-design.md  mobile-build-roadmap.md  prod-p2-licensing-design.md  prod-p3-subscription-ux-design.md  prod-p4-1-iap-followups-design.md  prod-p4-iap-validation-design.md  prod-p5-release-pipeline-design.md
docs/plugins/lipi-stronghold-key-bridge/: README.md  StrongholdKeyBridge.kt
docs/plugins/lipi-stt-android/: README.md
docs/reviews/: 2026-06-18-ide-readiness-backlog.md
docs/store-metadata/: README.md  app-store.md  google-play.md
public/: themes.html
public/mocks/: _overview.html  lipi-dark-ide-codient.html  lipi-light-ide-codient.html  lipi-themes-settings.html
scripts/: check-build-budget.mjs  click-ai-tab-and-screenshot.ps1  click-by-pos.ps1  click-terminal-tab-v2.ps1  click-terminal-tab-v3.ps1  click-terminal-tab-v4.ps1  click-terminal-tab.ps1  find-changelog-headers.ps1  find-secret-error-sites.ps1  fullscreen-screenshot.ps1  gen-lipi-icon.cjs  kill-tauri.ps1  repro-tracking.ps1  run-cargo-integration-4a.ps1  run-cargo-integration-4b.ps1  run-cargo-integration-4c.ps1  run-cargo-integration.ps1  run-cargo-test.ps1  run-cargo-tests-5a.ps1  run-tauri-dev-3b-v2.ps1  run-tauri-dev-3b.ps1  run-tauri-dev-3c1.ps1  run-tauri-dev-3c2.ps1  run-tauri-dev-4a.ps1  run-tauri-dev-4b.ps1  run-tauri-dev-4c.ps1  run-tauri-dev-and-shoot-4c.ps1  run-tauri-dev-and-shoot-5a.ps1  run-trace.ps1  run-vite-build.ps1  screenshot-4c.ps1  screenshot-ai-panel.ps1  screenshot.ps1  wake-and-screenshot.ps1
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  cargo-5b.txt  cargo-5c.txt  screenshot.ps1  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  render-source.ps1
src-tauri/keys/: README.md
src-tauri/keys/dev/: lipi-dev.key.pub
src-tauri/keys/production/: production.key.pub
src-tauri/src/: ai.rs  cancel.rs  chat.rs  command.rs  custom_tool.rs  fs.rs  fs_watcher.rs  git.rs  http.rs  iap.rs  iap_apple.rs  iap_keypair.rs  iap_microsoft.rs  iap_oauth.rs  ipc_policy.rs  lib.rs  licensing.rs  lipi_tools.rs  main.rs  menu.rs  native_dictation.rs  rotate_updater_key.rs  secrets.rs  secrets_stronghold.rs  secrets_stronghold_key_bridge.rs  stdio.rs  stt.rs  stt_capture.rs  stt_inference.rs  templates.rs  terminal.rs  updater_health.rs  voice_platform.rs  workspace_search.rs
src-tauri/tests/: git_status_smoke.rs  secrets_ai_smoke.rs  terminal_smoke.rs  terminal_tauri_smoke.rs
src-tauri/tools/: rotate_updater_key.rs  sign_license.rs
src/dev/: devices.test.ts  devices.ts  index.ts  useDeviceEmulatorShortcut.ts
src/ipc/: ai.ts  app.ts  deepLink.test.ts  deepLink.ts  fs.test.ts  fs.ts  fsWatcher.test.ts  fsWatcher.ts  git.ts  haptics.ts  httpRequest.ts  iap.test.ts  iap.ts  index.ts  licensing.ts  lipiTools.ts  lsp.test.ts  lsp.ts  nativeDictation.test.ts  nativeDictation.ts  runCommand.ts  secrets.test.ts  secrets.ts  stt.ts  templates.ts  terminal.ts  updaterHealth.test.ts  updaterHealth.ts  voicePlatform.ts  workspaceSearch.test.ts  workspaceSearch.ts
src/shared/: logger.ts  settingsIO.test.ts  settingsIO.ts  settingsIOv2.apply.test.ts  settingsIOv2.apply.ts  settingsIOv2.test.ts  settingsIOv2.ts  settingsIOv3.apply.test.ts  settingsIOv3.apply.ts  settingsIOv3.preview.test.ts  settingsIOv3.preview.ts  settingsIOv4.apply.test.ts  settingsIOv4.apply.ts  settingsIOv4.preview.test.ts  settingsIOv4.preview.ts  settingsIOv4.test.ts  settingsIOv4.ts  settingsIOv5.apply.test.ts  settingsIOv5.apply.ts  settingsIOv5.preview.test.ts  settingsIOv5.preview.ts  settingsIOv5.test.ts  settingsIOv5.ts  storeSnapshot.test.ts  storeSnapshot.ts  toolPolicyWarnings.ts
src/templates/: registry.test.ts  registry.ts
src/voice/: capabilities.test.ts  capabilities.ts  commitGrammar.test.ts  commitGrammar.ts  index.ts  pcmCapture.test.ts  pcmCapture.ts  session.test.ts  session.ts  sessionFactory.ts  types.ts  webSpeechTypes.ts  wisprClient.test.ts  wisprClient.ts
verify/: tauri_dev_3b.err  tauri_dev_3b.out  tauri_dev_3b_v2.err  tauri_dev_3b_v2.out  tauri_dev_3b_v2.pid  tauri_dev_3c1.err  tauri_dev_3c1.out  tauri_dev_3c2.err  tauri_dev_3c2.out  tauri_dev_4a.err  tauri_dev_4a.out  tauri_dev_4b.err  tauri_dev_4b.out  tauri_dev_4c.err  tauri_dev_4c.out  tauri_dev_5a.err  tauri_dev_5a.out
website/: index.html  script.js  styles.css
(+317 files in other folders)
