[package]
name = "lipi"
version = "0.0.2"
description = "Lipi — a voice-first, cross-platform IDE. BYO API key. No backend."
authors = ["Lipi Contributors"]
license = "MIT"
repository = "https://github.com/lipi-dev/lipi"
edition = "2021"
rust-version = "1.82.0"  # gix 0.78's MSRV
# When [[bin]] entries are declared explicitly (sign_license,
# rotate_updater_key), Cargo no longer auto-detects src/main.rs
# as the default binary. Setting `default-run` tells `cargo run`,
# `cargo build`, and the Tauri CLI which binary is the app.
default-run = "lipi"

# Match the npm package version. Tauri 2 reads this; keep in sync with
# `package.json` (no tooling to enforce yet — see docs/ENGINEERING.md).

[lib]
name = "lipi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
# Phase I: `app://lipi.open?path=...` deep-link scheme. The plugin
# emits a `deep-link://new-url` event when the OS hands the app a URL
# (cold start OR warm), and exposes `getCurrent()` for the launch-time
# URL (which fires before the event in some platform paths). The JS side
# (`src/shared/hooks/useDeepLinkRouting.ts`) subscribes to the event and
# calls `openWorkspace(path)` after validating the path against the
# user's home / Documents / Desktop. The scheme is registered under
# `plugins.deep-link.desktop.schemes` in `tauri.conf.json`.
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "1"
# tokio: 5a added `rt` + `macros` + `sync` (enough for the
# Tauri runtime + our `tokio::task::spawn_blocking` calls
# in the FS picker). 5b-1 adds `rt-multi-thread` for the
# `ai_chat_stream` command, which needs a real async
# runtime to drive `reqwest`'s streaming body reader.
# We do NOT add `full` — the `fs` feature is unused
# (we use `std::fs`) and `signal` is unused (we use
# ctrlc-free shutdown via Tauri).
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "sync", "time"] }
# reqwest (Phase 5b-1 — HTTPS client to LLM providers).
# `rustls-tls` instead of `default-tls` (which uses
# OpenSSL) because:
#   - rustls is pure-Rust, statically linked, no system
#     libssl dependency (matches the `keyring` `vendored`
#     decision in 5a)
#   - rustls plays better with `vendored` builds on
#     Linux (no SSL_DRIVER_FOUND link errors)
# `json` for serde_json body parsing. `stream` is
# implicit when reading the body via `bytes_stream`,
# so we don't need a separate `stream` feature.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
# `futures-util` is required for `StreamExt` (we use
# `bytes_stream` from reqwest and need `.next().await`).
# `tokio-util` is required for the
# `CancellationToken` we use to abort the reader on
# `ai_cancel_stream`.
futures-util = "0.3"
tokio-util = "0.7"
# gix (gitoxide) — pure-Rust git. Pinned to 0.78.0 because gix 0.79+
# transitively pulls gix-hash 0.23+, which has upstream bugs against
# rustc 1.93+ (non-exhaustive `match self` on the `Kind` enum; the
# `compile_error!` that gates on enabling a hash feature is the
# giveaway). 0.78's transitive gix-hash 0.22.x compiles cleanly.
# See HANDOFF Decision #26.
#
# `basic` is required — it pulls `gix-hash/sha1` (a hash algo feature
# is mandatory, per the upstream compile_error). We add `status` for
# the porcelain status iter, and `attributes` for .gitattributes
# support. We do NOT enable `parallel` (we want fast single-thread
# builds for the dev loop).
gix = { version = "=0.78.0", default-features = false, features = ["basic", "status", "attributes"] }
# portable-pty (Phase 4a — embedded terminal pipe). 0.8 is the
# current major; wezterm (the upstream) has been on 0.8 for a
# while and the API is stable. We do NOT need the `serde`
# feature — session ids are generated locally as hex strings.
portable-pty = "0.8"
# getrandom is already in the tree as a transitive dep (gix,
# gix-hash, etc.). We depend on it directly for the terminal
# session id (16 random bytes → 32-char hex string).
getrandom = "0.2"
# notify (Phase W — FS watcher). 6.1 is the current major.
# We use the default backend-per-platform selection
# (Windows: ReadDirectoryChangesW, macOS: FSEvents,
# Linux: inotify). We do NOT enable `crossbeam` (we
# don't need parallel event processing — a single
# Tokio task drains the channel and emits Tauri
# events).
notify = "6.1"
# keyring (Phase 5a — AI provider API keys in the OS keychain).
# 3.6.x is the current 3.x line. The 2.x line was sync-by-default
# with a different error type; 3.x is the rewrite with explicit
# platform feature selection (no defaults).
#
# Platform feature selection:
#   - windows-native  : Windows Credential Manager (Win + Win WebView2)
#   - apple-native    : macOS Keychain + iOS Keychain
#   - sync-secret-service + crypto-rust + vendored : Linux Secret
#     Service over D-Bus (works with GNOME Keyring, KWallet) with
#     OpenSSL statically linked so users don't need a separate
#     libssl install. `sync` (not `async`) because the rest of
#     the Lipi Rust code is sync (portable-pty is sync too) and
#     Tauri commands can call blocking code freely.
#   - (no `mock` feature needed in 3.6 — the mock store is always
#     compiled in. The `keyring::mock` module is available
#     unconditionally; tests use it via `set_default_credential_builder`.)
# Android is NOT supported by keyring 3.x. Mobile is a later
# phase — when we get there, we'll use `tauri-plugin-stronghold`
# or similar for Android. For 5a (desktop-only), the three
# desktop features above cover us.
keyring = { version = "3.6", default-features = false, features = ["windows-native", "apple-native", "sync-secret-service", "crypto-rust", "vendored"] }
# url (Phase 5c — `http_request` IPC, the custom-tool `http` kind).
# Re-exported by reqwest, but we depend directly so the validation
# step in `http.rs` doesn't go through a transitive crate.
url = "2"
# http (Phase 5c — synthetic response builder for unit tests).
http = "1"
# Phase 2 (offline licensing layer). Pure-Rust, no C deps, MSRV
# 1.65+. See `docs/plans/prod-p2-licensing-design.md` for the
# full design and `src/licensing.rs` for the impl.
#
# - ed25519-dalek v2: Ed25519 signing + verification for the
#   license key. The 2.x line is the current major; the 1.x line
#   is deprecated. We use the `pkcs8` feature for serialization
#   (the offline `sign_license` CLI tool will need to load a
#   PKCS#8-encoded private key from disk).
# - sha2 v0.10: For the SHA-256 of `hostname || username ||
#   mac_address` that forms the machine fingerprint. Already a
#   transitive dep of gix, but we depend on it directly so the
#   licensing module is self-contained.
# - base64 v0.22: For the JWS-style base64url encoding of the
#   license key. The 0.22 line is the current major.
# - hostname v0.4: Cross-platform hostname via gethostname(2) /
#   GetComputerNameExW. No system-specific code needed.
# - whoami v1: Cross-platform OS username (USER / USERNAME /
#   whoami(1) fallback). Used in the machine fingerprint.
# - mac_address v1: Cross-platform MAC address. We use the first
#   non-loopback MAC.
ed25519-dalek = { version = "2", default-features = false, features = ["pkcs8", "std", "fast"] }
sha2 = "0.10"
base64 = "0.22"
hostname = "0.4"
whoami = "1"
mac_address = "1"
# M2c (on-device STT — whisper.cpp + cpal). See HANDOFF §9.7.
#
# Build strategy: in the dev / CI sandbox we don't have
# libclang.dll available, so a real `whisper-rs-sys` build
# script can't run (it uses bindgen to generate the C FFI
# bindings). The full cpal + whisper-rs stack is therefore
# gated behind the `m2c-native` Cargo feature, which is OFF
# by default. With `m2c-native` OFF, the M2c Rust code
# compiles to a deterministic stub (see `src-tauri/src/stt.rs`
# and `src-tauri/src/stt_capture.rs`) — same interface, same
# IPC commands, just no live inference. Flipping the feature
# on a machine with libclang + cmake gives you the real path.
#
# This is the same pattern `keyring` uses (its
# `mock` store is always compiled in; the production backend
# is per-platform feature-gated). We document the trade-off
# in HANDOFF §9.7.
#
# cpal is a hard dep because its types (`Stream`, `Sample`,
# `Host`) are referenced from the stub's interface signature
# — even when `m2c-native` is off, we want the type-level
# shape to match what the real implementation will use.
cpal = "0.15"
# hound: WAV reader used in unit tests regardless of the
# feature flag (the stub tests verify the audio path's
# shape, not the inference).
hound = "3"
# whisper-rs is gated. The m2c-native feature pulls it in
# along with the C++ build via whisper-rs-sys (which needs
# libclang + cmake on the build machine).
#
# Bumped 2026-06-16 from "0.14" to "0.16": the vendored
# whisper-rs-sys 0.13.1 ships a `bindings.rs` whose static
# size assertion (`size_of::<whisper_full_params>() - 264usize`)
# was written for the pre-v1.8 struct layout. whisper.cpp v1.8+
# added a forward declaration of `whisper_full_params` near
# the top of the header (the C-only-build guard), which
# bindgen now picks up first and emits as an opaque type
# (size 1). The vendored size assertion underflows and the
# `cargo check --features m2c-native` build dies with
# `error[E0080]: attempt to compute 1_usize - 264_usize`.
# whisper-rs 0.16 pulls in whisper-rs-sys 0.15, which
# vendors a newer whisper.cpp + a matching size assertion,
# so the build succeeds. The API moved (WhisperContext::new
# -> WhisperContext::new_with_params + create_state) but
# our m2c-native paths are still stubs that just `Ok(())`,
# so no source code in src-tauri/ needs to change.
whisper-rs = { version = "0.16", default-features = false, optional = true }

# Platform-specific deps are added per phase:
# D2 (editor): notify for FS watcher        [W: shipped]
# D3 (git):    gix                          [Phase 3b: shipped]
# D4 (term):   portable-pty                 [Phase 4a: shipped]
# M2-M3:       cpal + platform STT bindings [Phase M2c: shipped]
# All gated by feature flags to keep Phase 1a build fast.

[dev-dependencies]
# serde_json is already a transitive dep (via tauri), but the git
# integration test snapshots the JSON wire shape, so we make it
# explicit in dev-deps for clarity. (The integration test binary
# needs to depend on it directly.)
serde_json = "1"
# tempfile (Phase 5c — `lipi-tools.json` round-trip tests).
tempfile = "3"

# Internal tools (project-lead-only CLIs)
# ----------------------------------------
# All three of these are project-lead-only CLIs
# that MUST NOT ship in the end-user installer.
# They are declared as explicit `[[bin]]` entries
# with `required-features = ["internal-tools"]`,
# AND the source files live in `tools/` rather
# than `src/bin/`. The two-layer exclusion is
# necessary because tauri-bundler 2.1.x's binary
# discovery runs in two stages:
#
#   1. Read `[[bin]]` entries from Cargo.toml —
#      respects `required-features` and skips
#      gated bins.
#   2. Walk `src/bin/` on disk — picks up every
#      .rs file not already in the list, IGNORING
#      `required-features`.
#
# The bug is documented in
# https://github.com/tauri-apps/tauri/issues/15325
# (and fixed in PR #14379, which targets a
# later tauri-bundler release than 2.1.x ships
# with). Until that fix lands, the only path
# that works in 2.1.x is: keep the `[[bin]]`
# declaration with `required-features` AND move
# the source file out of `src/bin/`. The bundler's
# Stage 1 skips the bin (gated), and Stage 2
# can't find it on disk (moved). The project lead
# builds the CLIs with
# `cargo build --features internal-tools`.
#
# Phase 6 daily-driver hardening replaces the
# previous `bd922b5` setup (where `sign_license`
# and `rotate_updater_key` had `required-features
# = []` and so were unconditionally built AND
# bundled) with the gated + moved layout. The
# user install now contains only `lipi.exe` and
# the NSIS uninstaller; the helper CLIs are
# project-lead-only.
[[bin]]
name = "sign_license"
path = "tools/sign_license.rs"
required-features = ["internal-tools"]

[[bin]]
name = "rotate_updater_key"
path = "tools/rotate_updater_key.rs"
required-features = ["internal-tools"]

[[bin]]
name = "gen_license_keypair"
path = "tools/gen_license_keypair.rs"
required-features = ["internal-tools"]

[features]
# Default: just the shell, no plugins. Add features as we wire them.
# `custom-protocol` is auto-injected by `cargo tauri dev` / `cargo tauri build`
# and toggles between the Vite dev server and a bundled asset protocol.
# Don't declare it manually.
default = []
# `internal-tools` enables the project-lead-only CLI
# binaries (sign_license, rotate_updater_key,
# gen_license_keypair). It is OFF by default so the
# end-user installer only contains `lipi.exe` and
# the NSIS uninstaller. Enable it locally or in CI
# with `cargo build --features internal-tools`.
internal-tools = []
# M2c hardware acceleration for whisper-rs. Off by default —
# the dev build does plain CPU inference (works in CI sandboxes
# without a GPU). Production builds opt in per target:
#   - macOS: `cargo build --features metal`     (Apple Silicon + Intel)
#   - Win + NVIDIA: `cargo build --features cuda`
#   - Linux + Win: `cargo build --features vulkan`
# We deliberately expose one feature per backend rather than
# letting cargo auto-detect — the binary shipped to users is
# exactly one variant, and the CI matrix builds each one in
# isolation.
# M2c umbrella: turn on the native whisper-rs + cpal capture
# path. Off by default — the dev build uses the stub. To ship
# a real on-device STT build: `cargo build --features m2c-native`
# (or one of `metal` / `cuda` / `vulkan` for hardware-accel).
m2c-native = ["dep:whisper-rs"]
metal = ["m2c-native", "whisper-rs/metal"]
cuda = ["m2c-native", "whisper-rs/cuda"]
vulkan = ["m2c-native", "whisper-rs/vulkan"]
# Uncomment when we add a plugin in the next phase:
# W: file watcher. The `notify` crate is a hard
# dep (not gated) because it adds a few hundred
# KB to the build but no runtime cost beyond
# the OS-level handles it opens per watched
# directory — turning it off would be a
# behaviour gap, not a size win. If we ever
# need to slim, move it behind a feature.
# notify-fs = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
